updated card design

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -2,8 +2,6 @@
 
 :host {
   display: block;
-  border: 1px solid black;
-  border-radius: 8px;
   box-shadow: rgb(243, 243, 243) 3px 5px 20px;
   width: $card-width;
   height: $card-height;
@@ -15,6 +13,8 @@
   position: relative;
   height: 100%;
   width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
   > * {
     pointer-events: none;
   };
@@ -93,7 +93,7 @@
   z-index: 2;
   color: white;
   left: 50%;
-  top: $card-width * 0.855;
+  top: $card-width * 0.86;
   transform: translate(-50%, 0);
   text-transform: uppercase;
   letter-spacing: 1.5px;
