--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,10 +1,12 @@
 <div class="componentContainer" (click)="onSelect.emit(cardData)">
     <div class="cardFront">
-        <img src="/assets/card-front.png" />
+        <img *ngIf="cardData.type === 'creature'" src="/assets/card-front.png" />
+        <img *ngIf="cardData.type === 'spell'" src="/assets/card-front-spell.png" />
+        <img *ngIf="cardData.type === 'mana'" src="/assets/card-front-soul.png" />
     </div>
     <div class="type" *ngIf="showType()">{{cardData.type}}</div>
     <div class="attributes" *ngIf="showAttributes()">{{cardData.attributes}}</div>
-    <div class="name" [ngClass]="{isSpell: cardData.type === 'spell', hasDescription: cardData.description}">{{cardData.name}}</div>
+    <div class="name" [ngClass]="{isSpell: cardData.type === 'spell', hasDescription: cardData.description, isMana: cardData.type === 'mana'}">{{cardData.name}}</div>
     <div class="costToBuy">{{cardData.costToBuy}}</div>
     <div class="costToPlay" *ngIf="cardData.type !== 'mana'">{{cardData.costToPlay ?? 0}}</div>
     <div class="mana" *ngIf="cardData.type === 'mana'">{{cardData.mana}}</div>
@@ -12,6 +14,9 @@
         <div [ngClass]="{underline: cardData.description2}">{{cardData.description}}</div>
         <div *ngIf="cardData.description2" class="description2">
             {{cardData.description2}}
+        </div>
+        <div class="flavour" *ngIf="!cardData.description2 && !cardData.description">
+            {{cardData.flavour}}
         </div>
     </div>
     <img class="art" [ngStyle]="{'background-image': 'url(\'/assets/art/' + cardData.artSrc + '\')'}"  />
