--- a/src/app/shop-secret/shop-secret.component.scss
+++ b/src/app/shop-secret/shop-secret.component.scss
@@ -5,12 +5,12 @@
 }
 .cardBack {
   width: $card-width;
-  height: $card-width * 1.3;
+  height: calc($card-width * 1.3);
   background-image: url("https://media.istockphoto.com/id/1160720443/vector/abstract-simple-geometric-vector-seamless-pattern-with-gold-line-texture-on-white-background.jpg?s=612x612&w=0&k=20&c=_kgBISj1Wio4LTRdBFN3IttmunACCl1-T5VKdurvb68=");
 }
 button {
   width: $card-width;
-  height: $card-width * 0.2;
+  height: calc($card-width * 0.2);
 }
 .optionsContainer {
   display: flex;
